[package]
name = "app"
version = "2.0.0"
description = "Android Toolkit by Team Nocturnal"
authors = ["XsMagical <XsMagical@Team-Nocturnal.com>", "Team Nocturnal"]
license = "UNLICENSED"
repository = "https://github.com/TeamNocturnal/AndroidToolkit"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
adb_client = { version = "3.1.2", default-features = false }
base64 = "0.22.1"
libloading = "0.8.9"
num-bigint-dig = "0.8.6"
num-traits = "0.2.19"
rcgen = { version = "0.14.7", default-features = false, features = ["ring", "pem", "crypto"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
rsa = { version = "0.9.10", features = ["pem"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["time", "fs", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures-util = "0.3"
tauri-plugin-fs = "2.4.5"
dirs = "5"
zip = "2"
